src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__command__bigv_p_two_commands.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"command -V -p echo file\")?"
---
command -V -p echo file

0   7   `command`  precommand.builtin.command
7   9   ` -`       punctuation.definition.parameter
9   10  `V`        variable.parameter.option
10  12  ` -`       punctuation.definition.parameter
12  13  `p`        variable.parameter.option
14  18  `echo`     CALLABLE `echo`
19  23  `file`     CALLABLE `file`
