src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__command__bigv_two_commands.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"command -V echo file\")?"
---
command -V echo file

0   7   `command`  precommand.builtin.command
7   9   ` -`       punctuation.definition.parameter
9   10  `V`        variable.parameter.option
11  15  `echo`     CALLABLE `echo`
16  20  `file`     CALLABLE `file`
