src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__command__end_of_options.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"command -- echo\")?"
---
command -- echo

0   7   `command`  precommand.builtin.command
7   10  ` --`      keyword.operator.end-of-options
11  15  `echo`     CALLABLE `echo`
