src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__command__p.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(r\"command -p echo\")?"
---
command -p echo

0   7   `command`  precommand.builtin.command
7   9   ` -`       punctuation.definition.parameter
9   10  `p`        variable.parameter.option
11  15  `echo`     CALLABLE `echo`
