src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__command__p_command_with_bigv.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"command -p echo -V file\")?"
---
command -p echo -V file

0   7   `command`  precommand.builtin.command
7   9   ` -`       punctuation.definition.parameter
9   10  `p`        variable.parameter.option
11  15  `echo`     CALLABLE `echo`
15  17  ` -`       punctuation.definition.parameter
17  18  `V`        variable.parameter.option
18  23  ` file`    meta.function-call.arguments
