src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__command__p_end_of_options.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"command -p -- echo\")?"
---
command -p -- echo

0   7   `command`  precommand.builtin.command
7   9   ` -`       punctuation.definition.parameter
9   10  `p`        variable.parameter.option
10  13  ` --`      keyword.operator.end-of-options
14  18  `echo`     CALLABLE `echo`
