src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__command__p_v_bigv_two_commands.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"command -pvV echo file\")?"
---
command -pvV echo file

0   7   `command`  precommand.builtin.command
7   9   ` -`       punctuation.definition.parameter
9   12  `pvV`      variable.parameter.option
13  17  `echo`     CALLABLE `echo`
18  22  `file`     CALLABLE `file`
